SimplestCRUDExample-main/src/main/java/com/example/SimplestCRUDExample/Error/RecordNotFoundException.java
package com.example.SimplestCRUDExample.Error;

public class RecordNotFoundException extends RuntimeException{
    public RecordNotFoundException(String id) {
        super(id);
    }
}
